1. clean up pom