@@ -31,19 +31,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
-						-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
  	<repositories>
 		<repository>
